      with a single factor, unless \code{na.last = NA}.
      
      \item \code{diag()} as used to generate a diagonal matrix has been
      re-written in C for speed and less memory usage.  It now forces
      the result to be numeric in the case \code{diag(x)} since it is
      said to have \sQuote{zero off-diagonal entries}.
    }
  }

  \subsection{LONG VECTORS}{
    \itemize{
      \item There is support for vectors longer than \eqn{2^{31}-1}{2^31
      - 1} elements on 64-bit platforms.  This applies to raw, logical,
      integer, double, complex and character vectors, as well as lists.
      (Elements of character vectors remain limited to
      \eqn{2^{31}-1}{2^31 - 1} bytes.)

      All aspects are currently experimental.

      \item Most operations which can sensibly be done with long vectors
      now work: others may return the error \sQuote{long vectors not
      supported yet}.  Some of these are because they explicitly work
      with integer indices (e.g. \code{anyDuplicated()}, \code{match()},
      \code{sample.int()}) or because other limits (e.g. of character
      strings or matrix dimensions) would be exceeded or the operations
      would be extremely slow.

      \item \code{length()} returns a double for long vectors, and
      lengths can be set to \eqn{2^{31}}{2^31} or more by the
      replacement function with a double value.

      \item Most aspects of indexing are available.  Generally
      double-valued indices can be used to access elements beyond
      \eqn{2^{31}-1}{2^31 - 1}.

      \item There is some support for matrices and arrays with each
      dimension less than \eqn{2^{31}}{2^31} but total number of
      elements more than that.  Only some aspects of matrix algebra work
      for such matrices, often taking minutes or hours for the smallest
      possible matrix.  In other cases the underlying Fortran code has
      an unstated restriction (as was found for complex \code{svd()}).
